# omnidownloader

./: .pdm.toml  app.py  pyproject.toml
templates/: index.html
