[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luan Henzo de Almeida", email = "43920813+luansinh0@users.noreply.github.com"},
]
dependencies = [
    "flask>=2.2.2",
    "pytube>=12.1.0",
    "youtube-dl>=2021.12.17",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
